--- a/src/less/fonts/IconsSite.less
+++ b/src/less/fonts/IconsSite.less
@@ -62,16 +62,18 @@
 @icon-vks: "\e93c";
 @icon-zoom-in: "\e93d";
 @icon-zoom-out: "\e93e";
+
 // Font family "IconsSite"
 @font-face {
 	font-family:"IconsSite";
-	src:url("@{fontpath}/IconsSite.woff2?3df335ed3a75511c322d21d53cea14d5") format("woff2"),
-		url("@{fontpath}/IconsSite.woff?3df335ed3a75511c322d21d53cea14d5") format("woff"),
-		url("@{fontpath}/IconsSite.ttf?3df335ed3a75511c322d21d53cea14d5") format("truetype");
+	src:url("@{fontpath}/IconsSite.woff?@{hashes}") format("woff"),
+		url("@{fontpath}/IconsSite.woff2?@{hashes}") format("woff2"),
+		url("@{fontpath}/IconsSite.ttf?@{hashes}") format("truetype");
 	font-weight:normal;
 	font-style:normal;
 	font-display: swap;
 }
+
 // Classes all icons
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
