--- a/site/assets/templates/projectsoft/tpl/yepnope-load.html
+++ b/site/assets/templates/projectsoft/tpl/yepnope-load.html
@@ -1,6 +1,6 @@
 
 <script type="text/javascript">
-	var Hyphenopoly = {
+	/*var Hyphenopoly = {
 	   require: {
 	       ru		: "ru"
 	   },
@@ -15,11 +15,11 @@
 	           }
 	       }
 	   }
-	};
-	window.HTTP_CLIENT = [!GetIP!];
+	};*/
+	window.HTTP_CLIENT = 0;
 	yepnope('assets/templates/projectsoft/js/appjs.min.js', undefined, function() {
-	   yepnope('assets/templates/projectsoft/js/main.js?f4e6903547ae8850fcc46d2a95c0dfbb', undefined, function() {
-	       yepnope('assets/comon/js/Hyphenopoly/Hyphenopoly_Loader.js?f4e6903547ae8850fcc46d2a95c0dfbb', undefined, function() {});
+	   yepnope('assets/templates/projectsoft/js/main.js?12d8a75f494f37bcc265fc75b5cd544e', undefined, function() {
+	       /*yepnope('assets/comon/js/Hyphenopoly/Hyphenopoly_Loader.js?12d8a75f494f37bcc265fc75b5cd544e', undefined, function() {});*/
 	   })
 	});
 </script>[!YandexMetrika!]
