--- a/src/less/inc/dop.less
+++ b/src/less/inc/dop.less
@@ -1,3 +1,87 @@
+html body .bvi-body .footer-develop,
+html body .bvi-body .footer-develop a {
+	font-size: 12px !important;
+}
+html body .bvi-body[data-bvi-font-family] .footer-develop,
+html body .bvi-body[data-bvi-font-family] .footer-develop a {
+	font-family: "Consolas" !important;
+}
+html body .bvi-body a[down-link] {
+	text-decoration: none !important;
+}
+html body .bvi-body[data-bvi-images="grayscale"] video,
+html body .bvi-body[data-bvi-images="grayscale"] object,
+html body .bvi-body[data-bvi-images="grayscale"] iframe {
+	filter: grayscale(1);
+}
+html body .bvi-body[data-bvi-images="false"] video,
+html body .bvi-body[data-bvi-images="false"] object,
+html body .bvi-body[data-bvi-images="false"] iframe {
+	visibility: hidden;
+}
+
+body.new_year .section.container .container-fluid.content .h1, body.new_year .section.container .container-fluid.content h1 {
+	padding-bottom: 26%;
+	background-position: center bottom;
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-image: url(/assets/templates/projectsoft/images/top.png);
+}
+html body .bvi-body[data-bvi-images="false"] .embed-responsive {
+	text-align: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	padding-bottom: 4.3em;
+}
+html body .bvi-body[data-bvi-images="false"] .embed-responsive::before {
+	border: 2px dashed !important;
+	content: "Embedded Object";
+	display: inline-block;
+	padding: 0.1em 0.6em;
+}
+#detach-button-host {
+	display: none !important;
+}
+::selection {
+	background-color: #0098ff;
+	color: white;
+}
+.footer ::selection {
+	background-color: #ffffff;
+	color: #0098ff;
+}
+.director .column.sidebar.all a::selection {
+	background-color: #ffffff;
+	color: #0098ff;
+}
+.director .column.sidebar.all a:hover::selection {
+	background-color: #0098ff;
+	color: #ffffff;
+}
+a.red, .red{
+	color: red;
+}
+a.red:hover {
+	color: #ff5c5c;
+}
+.news_person-history > strong {
+	max-width: 30em;
+	flex: 1;
+}
+.ul-not,
+.ulnot,
+.ul-no,
+.ulno {
+	padding: 0;
+	list-style: none;
+}
 .line-hr {
-	
+	box-shadow: 0 0 3px #0098ff;
+	height: 0;
+	overflow: hidden;
+	border: unset;
+	border-bottom: .5px solid #0098ff;
 }
