--- a/site/assets/templates/projectsoft/childrens.html
+++ b/site/assets/templates/projectsoft/childrens.html
@@ -12,7 +12,7 @@
 				</div>
 			</div>
 			<div class="row">[[DLCrumbs &showCurrent=`1`]]</div>
-			<div class="row">
+			<div class="row" id="page">
 				<div class="container-fluid">
 					<h1>[*pagetitle*]</h1>
 					<div class="content hyphenation">[*content*]
