--- a/site/assets/templates/projectsoft/distantion.html
+++ b/site/assets/templates/projectsoft/distantion.html
@@ -10,7 +10,7 @@
 				</div>
 			</div>
 			<div class="row">[[DLCrumbs &showCurrent=`1`]]</div>
-			<div class="row">
+			<div class="row" id="page">
 				<div class="container-fluid">
 					<h1>[[alterTitle]]</h1>
 					<div class="content hyphenation">
