--- a/site/assets/templates/projectsoft/index.html
+++ b/site/assets/templates/projectsoft/index.html
@@ -8,26 +8,27 @@
 			{{@FILE assets/templates/projectsoft/tpl/global-menu.html}}
 			{{@FILE assets/templates/projectsoft/tpl/slider.html}}
 			{{@FILE assets/templates/projectsoft/tpl/director.html}}
-			<div class="row">
-				<div class="container-fluid content hyphenation">[*content*]</div>
-			</div>[[DocLister?
-			  &parents=`2`
-			  &display=`5`
-			  &tvList=`imageSoc, news_date`
-			  &tvPrefix=``
-			  &orderBy=`news_date DESC`
-			  &sortBy=`news_date`
-			  &sortDir=`DESC`
-			  &tvSortType=`TVDATETIME`
-			  &prepare=`\ProjectSoft\PrepareDL::prepareItem`
-			  &noneTPL=`@CODE:<span></span>`
-			  &ownerTPL=`@FILE:projectsoft/tpl/home_news`
-			  &tpl=`@FILE:projectsoft/tpl/news_tpl`
-			  &showParent=`0`
-			  &urlScheme=`full`
-				&noneWrapOuter=`0`
-			]]
-			{{@FILE assets/templates/projectsoft/tpl/univers.html}}
+			<div id="page">
+				<div class="row">
+					<div class="container-fluid content hyphenation">[*content*]</div>
+				</div>[[DocLister?
+				  &parents=`2`
+				  &display=`5`
+				  &tvList=`imageSoc, news_date`
+				  &tvPrefix=``
+				  &orderBy=`news_date DESC`
+				  &sortBy=`news_date`
+				  &sortDir=`DESC`
+				  &tvSortType=`TVDATETIME`
+				  &prepare=`\ProjectSoft\PrepareDL::prepareItem`
+				  &noneTPL=`@CODE:<span></span>`
+				  &ownerTPL=`@FILE:projectsoft/tpl/home_news`
+				  &tpl=`@FILE:projectsoft/tpl/news_tpl`
+				  &showParent=`0`
+				  &urlScheme=`full`
+					&noneWrapOuter=`0`
+				]]
+			</div>{{@FILE assets/templates/projectsoft/tpl/univers.html}}
 			{{@FILE assets/templates/projectsoft/tpl/sites-link.html}}
 		</div>{{@FILE assets/templates/projectsoft/tpl/footer.html}}
 		{{@FILE assets/templates/projectsoft/tpl/yepnope.html}}
