--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,26 +10,27 @@ html(lang="ru" prefix="og: http://ogp.me/ns#")
 			|{{@FILE assets/templates/projectsoft/tpl/global-menu.html}}
 			|{{@FILE assets/templates/projectsoft/tpl/slider.html}}
 			|{{@FILE assets/templates/projectsoft/tpl/director.html}}
-			.row
-				.container-fluid.content.hyphenation
-					|[*content*]
-			|[[DocLister?
-			|   &parents=`2`
-			|   &display=`5`
-			|   &tvList=`imageSoc, news_date`
-			|   &tvPrefix=``
-			|   &orderBy=`news_date DESC`
-			|   &sortBy=`news_date`
-			|   &sortDir=`DESC`
-			|   &tvSortType=`TVDATETIME`
-			|   &prepare=`\ProjectSoft\PrepareDL::prepareItem`
-			|   &noneTPL=`@CODE:<span></span>`
-			|   &ownerTPL=`@FILE:projectsoft/tpl/home_news`
-			|   &tpl=`@FILE:projectsoft/tpl/news_tpl`
-			|   &showParent=`0`
-			|   &urlScheme=`full`
-			|	&noneWrapOuter=`0`
-			|]]
+			#page
+				.row
+					.container-fluid.content.hyphenation
+						|[*content*]
+				|[[DocLister?
+				|   &parents=`2`
+				|   &display=`5`
+				|   &tvList=`imageSoc, news_date`
+				|   &tvPrefix=``
+				|   &orderBy=`news_date DESC`
+				|   &sortBy=`news_date`
+				|   &sortDir=`DESC`
+				|   &tvSortType=`TVDATETIME`
+				|   &prepare=`\ProjectSoft\PrepareDL::prepareItem`
+				|   &noneTPL=`@CODE:<span></span>`
+				|   &ownerTPL=`@FILE:projectsoft/tpl/home_news`
+				|   &tpl=`@FILE:projectsoft/tpl/news_tpl`
+				|   &showParent=`0`
+				|   &urlScheme=`full`
+				|	&noneWrapOuter=`0`
+				|]]
 			|{{@FILE assets/templates/projectsoft/tpl/univers.html}}
 			|{{@FILE assets/templates/projectsoft/tpl/sites-link.html}}
 		|{{@FILE assets/templates/projectsoft/tpl/footer.html}}
