--- a/src/pug/vov.pug
+++ b/src/pug/vov.pug
@@ -13,34 +13,35 @@ html(lang="ru" prefix="og: http://ogp.me/ns#")
 						|{{@FILE assets/templates/projectsoft/tpl/sidebar.html}}
 			.row
 				|[[DLCrumbs &showCurrent=`1`]]
-			.row
-				.container-fluid
-					h1
-						|[*pagetitle*]
-					.content.hyphenation
-						|[*content*]
-			|[[DocLister?
-			|   &parents=`170`
-			|   &display=`5`
-			|   &tvList=`imageSoc, news_date`
-			|   &tvPrefix=``
-			|   &orderBy=`news_date DESC`
-			|   &sortBy=`news_date`
-			|   &sortDir=`DESC`
-			|   &tvSortType=`TVDATETIME`
-			|   &prepare=`\ProjectSoft\PrepareDL::prepareItem`
-			|   &noneTPL=``
-			|   &ownerTPL=`@FILE:projectsoft/tpl/news`
-			|   &tpl=`@FILE:projectsoft/tpl/news_tpl`
-			|   &showParent=`0`
-			|   &urlScheme=`full`
-			|   &noneWrapOuter=`0`
-			|]]
-			.row
-				.container-fluid
-					p.text-center
-						a.btn(href="[(site_url)][~170~]")
-							|Все новости
+			#page
+				.row
+					.container-fluid
+						h1
+							|[*pagetitle*]
+						.content.hyphenation
+							|[*content*]
+				|[[DocLister?
+				|   &parents=`170`
+				|   &display=`5`
+				|   &tvList=`imageSoc, news_date`
+				|   &tvPrefix=``
+				|   &orderBy=`news_date DESC`
+				|   &sortBy=`news_date`
+				|   &sortDir=`DESC`
+				|   &tvSortType=`TVDATETIME`
+				|   &prepare=`\ProjectSoft\PrepareDL::prepareItem`
+				|   &noneTPL=``
+				|   &ownerTPL=`@FILE:projectsoft/tpl/news`
+				|   &tpl=`@FILE:projectsoft/tpl/news_tpl`
+				|   &showParent=`0`
+				|   &urlScheme=`full`
+				|   &noneWrapOuter=`0`
+				|]]
+				.row
+					.container-fluid
+						p.text-center
+							a.btn(href="[(site_url)][~170~]")
+								|Все новости
 			|{{@FILE assets/templates/projectsoft/tpl/sites-link.html}}
 		|{{@FILE assets/templates/projectsoft/tpl/footer.html}}
 		|{{@FILE assets/templates/projectsoft/tpl/yepnope.html}}
